# rust_compose_errors

./: Cargo.toml
examples/: main.rs
src/: either.rs  emit.rs  lib.rs  parse.rs
src/lib/: compose_errors.rs  emit.rs  parse.rs
tests/: integration_test.rs  tests.rs
tests/compile-fail/: multiple-errors.rs
